assets/css/style.css
@font-face
{
    font-family: "Cantarell";
    src: url("/assets/fonts/cantarell-vf.woff2") format("woff2"),
         url("/assets/fonts/cantarell-vf.otf") format("opentype");
    font-style: normal;
}
@font-face
{
    font-family: "Hack";
    src: url("/assets/fonts/Hack-Regular.ttf") format("ttf");
    font-style: normal;
}


body
{
    font-family: "Cantarell", sans-serif;
    font-size: 1.2em;
}
/* sections */
header
{
    width: 100%;
    min-height: 15%;
    left: 0;
    text-align: center;
    overflow: hidden;
}
article
{
    left: 25%;
    width: 50%;
    min-height: 50vh;
    margin: auto;
    text-align: left;
    margin-bottom: 10vh;
}
/* footer */
article:after
{
    content: "";
    display: block;
}
footer, article:after { height: 4vh; }
footer
{
    left: 0;
    text-align: center;
}

/* special elements */
div#top
{
    margin-top: 3vh;
    margin-bottom: 3vh;
}
a#site
{
    background: transparent;
    color: #000000;
    text-decoration: none;
}
img#logo
{
    display: inline;
    height: 2.2em;
    vertical-align: middle;
    margin-right: 0.2em;
}
h2#title
{
    display: inline;
    font-size: 1.8em;
    vertical-align: middle;
}
nav
{
    font-size: 1.1em;
    margin-bottom: 4vh;
}

article div.post, /* between posts */
article h2.post, h1#post { margin-bottom: -0.5em; } /* between title and date */
p#description
{
    font-size: 1.05em;
    font-weight: lighter;
}

/* text */
a
{
    margin-right: 0.1em;
    margin-left: 0.1em;
    color: #000000;
    transition-duration: 0.3s;
    text-decoration: underline 0.1em;
}
a:hover,
.selected
{
    color: #ffffff;
    background: #3584e4;
    text-decoration: none;
}
a.social { white-space: nowrap; };
small
{
    font-size: 0.85em;
}
li { margin: 0.8em; }
h2 { margin-top: 4vh; }
/* code */
div.highlight
{
    background: black;
    border-radius: 2%;
    overflow-x: scroll;
}
code
{
    font-family: "Hack", monospace;
    font-size: 0.9em;
    color: #ffffff;
}
p code
{
    white-space: nowrap;
    border-radius: 0.2em;
    background: black;
    color: #ffffff;
}
del { text-decoration-thickness: 0.15em; }
/* image */
img.post
{
    max-width: 100%;
    max-height: 30em;
    margin: auto;
    display: block;
    margin-bottom: 1vh;
}
span.caption
{
        width: 100%;
        display: block;
        text-align: center;
        font-style: italic;
        margin-bottom: 4vh;
}

/* tablet */
@media only screen and (max-width: 1200px)
{
    article
    {
        left: 15%;
        width: 70%;
    }
    /* mobile */
    @media only screen and (max-width: 768px)
    {
        img#logo { height: 1.9em; }
        h2#title { font-size: 1.6em; }
        
        article
        {
            left: 5%;
            width: 90%;
        }
        article div.post { margin-bottom: 0em; }
    }
    footer { font-size: 0.9em; }
}

/* color palette */
.box
{
    float: left;
    margin-right: 0.4em;
    width: 1em;
    height: 1em;
    box-shadow: 0 0.1em 0.2em 0 rgba(0, 0, 0, 0.2), 0 0.2em 1em 0 rgba(0, 0, 0, 0.19);
}
.white { background-color: #ffffff; }
.black { background-color: #000000; }
.blue { background-color: #3584e4; }
.gray { background-color: #d0cfcc; }

